--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <div id="controls">
     <label>Gravity: <span id="gVal">0.5</span></label>
     <input type="range" id="gravity" min="0" max="2" step="0.01" value="0.5">
+    <br>
+    <label for="angle">Angle (degrees): <span id="angleVal">45</span></label>
+    <input type="range" id="angle" min="10" max="80" value="45">
+    <br>
     <button onclick="reset()">Reset</button>
   </div>
   <canvas id="game" width="800" height="500"></canvas>
