--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <label for="angle">Angle (degrees): <span id="angleVal">45</span></label>
     <input type="range" id="angle" min="10" max="80" value="45">
     <br>
+    <label for="restitution">Restitution (bounciness): <span id="restitutionVal">0.6</span></label>
+    <input type="range" id="restitution" min="0" max="1" step="0.01" value="0.6">
+    <br>
     <button onclick="reset()">Reset</button>
   </div>
   <canvas id="game" width="800" height="500"></canvas>
