--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <div id="controls">
-    <label>Gravity: <span id="gVal">0.5</span></label>
+    <label for="gravity">Gravity (pull strength): <span id="gVal">0.5</span></label>
     <input type="range" id="gravity" min="0" max="2" step="0.01" value="0.5">
     <br>
     <label for="angle">Angle (degrees): <span id="angleVal">45</span></label>
-    <input type="range" id="angle" min="10" max="80" value="45">
+    <input type="range" id="angle" min="10" max="90" value="45">
     <br>
     <label for="restitution">Restitution (bounciness): <span id="restitutionVal">0.6</span></label>
     <input type="range" id="restitution" min="0" max="1" step="0.01" value="0.6">
