--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
   <div id="controls">
     <label for="gravity">Gravity (pull strength): <span id="gVal">0.5</span></label>
     <input type="range" id="gravity" min="0" max="2" step="0.01" value="0.5">
+    <div>Min: 0, Max: 2</div>
     <br>
     <label for="angle">Angle (degrees): <span id="angleVal">45</span></label>
     <input type="range" id="angle" min="10" max="90" value="45">
+    <div>Min: 10, Max: 90</div>
     <br>
     <label for="restitution">Restitution (bounciness): <span id="restitutionVal">0.6</span></label>
     <input type="range" id="restitution" min="0" max="1" step="0.01" value="0.6">
+    <div>Min: 0, Max: 1</div>
     <br>
     <button onclick="reset()">Reset</button>
   </div>
