changed font colors

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Projectile Game</title>
   <style>
     canvas { background: #111; display: block; margin: 20px auto; }
-    #controls { text-align: center; color: white; font-family: sans-serif; }
+    #controls { text-align: center; color: blue; font-family: sans-serif; }
     input[type=range] { width: 200px; }
+    #controls div { color: blue; } /* Added style for scale values */
   </style>
 </head>
 <body>
